deployments/k8s/graphql/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql
  namespace: issho
  labels: &labels
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: issho-ni
    app.kubernetes.io/name: graphql
spec:
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      containers:
        - name: graphql
          image: docker.io/issho/graphql
          resources:
            limits:
              memory: 64Mi
              cpu: 100m
          ports:
            - name: https
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /live
              scheme: HTTPS
              port: https
          readinessProbe:
            httpGet:
              path: /ready
              scheme: HTTPS
              port: https
