deployments/k8s/graphql/service.yml
apiVersion: v1
kind: Service
metadata:
  name: graphql
  namespace: issho
spec:
  selector:
    app: graphql
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: https
