deployments/k8s/graphql/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: graphql
  namespace: issho
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: issho-ni
    app.kubernetes.io/name: graphql
spec:
  rules:
    - host: issho.k8s.localhost
      http:
        paths:
          - backend:
              serviceName: graphql
              servicePort: https
